Add screenshots of the live pages

--- a/Day05/bella.html
+++ b/Day05/bella.html
@@ -93,7 +93,7 @@
             
             <Section tabindex="6">
                 <p class="content">
-                    Brainy had a very curious cat and she named her Bella. she was a very curious cat. She loved to explore her surroundings and get into all sorts of mischief. One day, Bella was exploring the backyard when she saw a butterfly fluttering by. She chased the butterfly all over the yard, but she couldn't catch it.
+                    Brainy had a very curious cat and he named her Bella. she was a very curious cat. She loved to explore her surroundings and get into all sorts of mischief. One day, Bella was exploring the backyard when she saw a butterfly fluttering by. She chased the butterfly all over the yard, but she couldn't catch it.
 
                     Bella was starting to get tired, but she didn't want to give up. She kept chasing the butterfly until it finally landed on a flower. Bella crept up slowly and then pounced! She caught the butterfly in her paw and held it up to her face.
 
